--- a/front-end/src/app/shared/scss/_global.scss
+++ b/front-end/src/app/shared/scss/_global.scss
@@ -111,3 +111,7 @@ font-size: 2rem;
   color: #212121;
 }
 
+.ng-select.ng-select-disabled > .ng-select-container {
+  background-color: #e9ecef;
+}
+
