edit flow for loans

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -122,7 +122,8 @@
         </app-sched-c-loans>
 
         <app-loansummary 
-          *ngIf="scheduleType === 'sched_c_loan_summary'">          
+          *ngIf="scheduleType === 'sched_c_loan_summary'"
+          (status)="onNotify($event)">          
         </app-loansummary>
 
         <app-loanpayment
