--- a/front-end/src/app/forms/sched-c/loan-summary/loan-summary.component.html
+++ b/front-end/src/app/forms/sched-c/loan-summary/loan-summary.component.html
@@ -81,7 +81,7 @@
               <i class="ellipsis-icon"></i>
             </button>
             <div id="loanSumamry__dropdown-action" class="dropdown-menu" ngbDropdownMenu>
-              <button class="dropdown-item" (click)="editLoan(ln)">
+              <button class="dropdown-item" (click)="editLoanPayment(ln)">
                 <i class="edit-icon"></i> Edit
               </button>
               <button class="dropdown-item" (click)="LoanRepayment(ln)">
