--- a/front-end/src/app/forms/sched-c/loanpayment/loanpayment.component.html
+++ b/front-end/src/app/forms/sched-c/loanpayment/loanpayment.component.html
@@ -52,8 +52,8 @@
         </div>
 
         <div class="form-group col col-md-3">
-          <label for="middle_name">Middle Initial (Optional)</label>
-          <input ngModel type="text" class="form-control" id="middle_name" name="middle_name" style="width: 197px;"
+          <label for="middle_Name">Middle Initial (Optional)</label>
+          <input ngModel type="text" class="form-control" id="middle_Name" name="middle_Name" style="width: 197px;"
             maxlength="20" disabled>
         </div>
 
