Few additional fixes reported by QA

--- a/front-end/src/app/forms/sched-c/loanpayment/loanpayment.component.html
+++ b/front-end/src/app/forms/sched-c/loanpayment/loanpayment.component.html
@@ -234,7 +234,7 @@
       <!-- Descriptions Row -->
       <div class="row">
         <div class="form-group col">
-          <label for="expenditure_purpose">Expenditure Purpose Description
+          <label for="expenditure_purpose">Expenditure Purpose Description (Optional)
             <button type="button" class="btn btn-info" ngbTooltip="{{tooltipPlaceholder}}" tooltipClass="form-tooltip">
               <i class="info-icon" aria-hidden="true"></i>
               <span class="sr-only">Click here for more information</span>
@@ -244,7 +244,7 @@
             maxlength="100"></textarea>
         </div>
         <div class="form-group col">
-          <label for="memo_text">Memo Text/Description
+          <label for="memo_text">Memo Text/Description (Optional)
             <button type="button" class="btn btn-info" ngbTooltip="{{tooltipPlaceholder}}" tooltipClass="form-tooltip">
               <i class="info-icon" aria-hidden="true"></i>
               <span class="sr-only">Click here for more information</span>
