update h5 validation message

--- a/front-end/src/app/forms/sched-h5/sched-h5.component.html
+++ b/front-end/src/app/forms/sched-h5/sched-h5.component.html
@@ -62,7 +62,7 @@
               <select id="" formControlName="account_name" class="form-control"
                   [ngClass]="
                     schedH5.get('account_name')?.invalid &&
-                    (schedH5.touched || schedH5.dirty)
+                    (schedH5.touched || schedH5.dirty) && isSubmit
                       ? 'input-field-error'
                       : ''
                   " 
@@ -105,7 +105,7 @@
               <div class="text-error text-left"
                 *ngIf="receiptDateErr"
               >
-                Date is out of the coverage period.
+              The date entered falls outside of the report coverage period. Transactions for this report should fall within {{ cvgStartDate }} and {{ cvgEndDate }} (Coverage Dates of Report). If you need to add a transaction with a date that falls outside of the coverage period for this report, you will need to check the memo code box.
               </div>
             </div>
           </div>
