fixed sanity test bugs from dev and wired the loan summary screen, plus edit actions buttons

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -122,7 +122,7 @@
         </app-sched-c-loans>
 
         <app-loansummary 
-          *ngIf="scheduleType === 'sched_c_loan_summary'"
+          *ngIf="scheduleType === 'sched_c_ls' || scheduleType === 'sched_c_lo'"
           (status)="onNotify($event)">          
         </app-loansummary>
 
