--- a/front-end/src/app/forms/sched-c/loan.component.html
+++ b/front-end/src/app/forms/sched-c/loan.component.html
@@ -41,7 +41,8 @@
                       <i class="info-icon" aria-hidden="true"></i>
                       <span class="sr-only">Click here for more information</span>
                     </div>
-                    <ng-container *ngIf="!col?.validation?.required">
+                    <ng-container *ngIf="!col?.validation?.required && col?.name !== 'loan_balance'  && 
+                      col?.name !== 'loan_payment_to_date'">
                       (Optional)
                     </ng-container>
                   </label>
@@ -67,7 +68,7 @@
                         [ngClass]="frmLoan.get(col?.name)?.invalid &&
                         (frmLoan.touched || frmLoan.dirty)
                           ? 'input-field-error'
-                          : ''"  />
+                          : ''" />
                       <input *ngIf="col?.name === 'last_name'" class="form-control" [style.width]="col?.width"
                         [style.height]="col?.height" [attr.type]="col?.type" [attr.name]="col?.name"
                         [attr.value]="col?.value" [maxlength]="col?.validation?.max" [formControlName]="col?.name"
