update html fileds

--- a/front-end/src/app/forms/form-3x/sched-h1/sched-h1.component.html
+++ b/front-end/src/app/forms/form-3x/sched-h1/sched-h1.component.html
@@ -18,7 +18,7 @@
                 <tr>
                   <td class="summary_text">
                     <input ngModel type="radio" name="h1_election_year_options" value="1" id="opt1">
-                    <label for="opt1">Presidential-only Election Year(28% Federal)</label>
+                    <label for="opt1">Presidential-Only Election Year (28% Federal)</label>
 
                     <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
                         tooltipClass="form-tooltip">
@@ -30,7 +30,7 @@
                 <tr>
                   <td class="summary_text">
                     <input ngModel type="radio" name="h1_election_year_options" value="2" id="opt2">
-                    <label for="opt2"> Presidential and Senate Election Year(36% Federal)</label>
+                    <label for="opt2"> Presidential and Senate Election Year (36% Federal)</label>
 
                     <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
                         tooltipClass="form-tooltip">
@@ -42,7 +42,7 @@
                 <tr>
                   <td class="summary_text">
                     <input ngModel type="radio" name="h1_election_year_options" value="3" id="opt3">
-                    <label for="opt3">Senate-only Election Year(21% Federal)</label>
+                    <label for="opt3">Senate-Only Election Year (21% Federal)</label>
 
                     <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
                         tooltipClass="form-tooltip">
@@ -54,7 +54,7 @@
                 <tr>
                   <td class="summary_text">
                     <input ngModel type="radio" name="h1_election_year_options" value="4" id="opt4">
-                    <label for="opt4">None-Presidential and None-Senate Election Year(15% Federal)</label>
+                    <label for="opt4">None-Presidential and None-Senate Election Year (15% Federal)</label>
 
                     <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
                         tooltipClass="form-tooltip">
@@ -91,7 +91,7 @@
       <div class="header-content">
           <div class="float-left sub-title">
             <h2>
-            Seperarate Segregated Funds and Non-connected Committees
+            Seperarate Segregated Funds and Non Connected Committees
             </h2>
           </div>
       </div>
@@ -155,7 +155,7 @@
                       </button>
                     </div>
 
-                    this ratio apply to (check all that apply):
+                    This ratio apply to (check all that apply):
                   </td>
                 </tr>
                 <tr>
