initial commit on c1.. autopopulate and disable

--- a/front-end/src/app/forms/sched-c/loan.component.html
+++ b/front-end/src/app/forms/sched-c/loan.component.html
@@ -300,7 +300,7 @@
                 <button class="btn btn-previous btn-left" type="button" (click)="viewTransactions()">
                   Cancel
                 </button>
-                <button class="btn btn-secondary btn-right" type="button" (click)="saveLoan()">
+                <button class="btn btn-secondary btn-right" type="button" (click)="onSaveLoan()">
                   Save
                 </button>
                 <button *ngIf="entityType === 'ORG'" class="btn btn-secondary btn-right" type="button"
