--- a/front-end/src/app/forms/sched-c1/sched-c1.component.html
+++ b/front-end/src/app/forms/sched-c1/sched-c1.component.html
@@ -55,6 +55,7 @@
               type="text"
               [formControlName]="'lending_institution'"
               [attr.name]="'lending_institution'"
+              [attr.readonly]="true"
               [style.width]="'100%'"
               [style.height]="'30px'"
               [ngClass]="
@@ -88,6 +89,7 @@
               type="text"
               [formControlName]="'mailing_address'"
               [attr.name]="'mailing_address'"
+              [attr.readonly]="true"
               [style.width]="'100%'"
               [style.height]="'30px'"
               [ngClass]="
@@ -120,6 +122,7 @@
               id="city"
               type="text"
               [formControlName]="'city'"
+              [attr.readonly]="true"
               [attr.name]="'city'"
               [style.width]="'66%'"
               [style.height]="'30px'"
@@ -186,6 +189,7 @@
               type="text"
               [formControlName]="'zip'"
               [attr.name]="'zip'"
+              [attr.readonly]="true"
               [style.width]="'33%'"
               [style.height]="'30px'"
               [ngClass]="
@@ -230,6 +234,7 @@
                 [formControlName]="'loan_amount'"
                 [attr.name]="'loan_amount'"
                 [style.width]="'66%'"
+                [attr.readonly]="true"
                 [style.height]="'30px'"
                 [ngClass]="
                   c1Form.get('loan_amount')?.invalid &&
@@ -263,6 +268,7 @@
                 type="number"
                 max="100"
                 [formControlName]="'loan_intrest_rate'"
+                [attr.readonly]="true"
                 [attr.name]="'loan_intrest_rate'"
                 [style.width]="'33%'"
                 [style.height]="'30px'"
@@ -309,6 +315,7 @@
                 type="date"
                 [formControlName]="'loan_incurred_date'"
                 [attr.name]="'loan_incurred_date'"
+                [attr.readonly]="true"
                 [style.width]="'66%'"
                 [style.height]="'30px'"
                 [ngClass]="
@@ -347,6 +354,7 @@
                 type="date"
                 [formControlName]="'loan_due_date'"
                 [attr.name]="'loan_due_date'"
+                [attr.readonly]="true"
                 [style.width]="'66%'"
                 [style.height]="'30px'"
                 [ngClass]="
@@ -498,6 +506,7 @@
                 id="total_outstanding_balance"
                 type="text"
                 [formControlName]="'total_outstanding_balance'"
+                [attr.readonly]="true"
                 [attr.name]="'total_outstanding_balance'"
                 [style.width]="'66%'"
                 [style.height]="'30px'"
