--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -145,6 +145,7 @@
         <app-sched-c1
           *ngIf="scheduleType === 'sched_c1'"
           [forceChangeDetection]="forceChangeDetectionC1"
+          [transactionDetail]="transactionDetailSchedC" 
           [scheduleAction]="scheduleAction"
           (status)="onNotify($event)"
         >
