--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -106,7 +106,7 @@
           [hidden]="scheduleType !== 'sched_f'"
           [transactionTypeText]="transactionTypeTextSchedF"
           [transactionType]="transactionTypeSchedF"
-          [scheduleAction]="scheduleAction"
+          [scheduleAction]="scheduleFAction"
           [scheduleType]="scheduleType"
           (status)="onNotify($event)"
         >
