add file-export icon

--- a/front-end/src/app/forms/sched-h4/sched-h4.component.html
+++ b/front-end/src/app/forms/sched-h4/sched-h4.component.html
@@ -209,7 +209,7 @@
                                         <i class="fas fa-print"></i> Print
                                     </button>
                                     <button class="dropdown-item">
-                                      <i class="fas fa-export"></i> Export
+                                      <i class="fas file-export-icon"></i> Export
                                     </button>
                                     <button class="dropdown-item">
                                         <i class="fas fa-link"></i> Link
