abstract parent enum; schedF change detaection

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -104,6 +104,8 @@
         </div>
         <app-sched-f
           [hidden]="scheduleType !== 'sched_f'"
+          [formType]="'3X'"
+          [forceChangeDetection]="forceChangeDetectionFDebtPayment"
           [transactionTypeText]="transactionTypeTextSchedF"
           [transactionType]="transactionTypeSchedF"
           [scheduleAction]="scheduleFAction"
