date range include start date

--- a/front-end/src/app/forms/sched-h2/sched-h2.component.html
+++ b/front-end/src/app/forms/sched-h2/sched-h2.component.html
@@ -156,9 +156,9 @@
               <div class="col col-md-2"></div>
               <div class="col col-md-3 form-group">
                 <div class="row input-group">
-                  <label for="">
-                      <h1>Federal:</h1>
-                  </label>
+                  <div class="subtitle2">
+                      Federal:
+                  </div>
                   <input class="form-control" 
                     type="number" 
                     formControlName="federal_percent"
@@ -179,11 +179,11 @@
                   Only 0 - 100 allowed.
                 </div>
               </div>
-              <div class="col col-md-3 form-group">
+              <div class="col col-md-4 form-group">
                   <div class="row input-group">
-                      <label for="">
-                          <h1>Nonfederal:</h1>                            
-                      </label>
+                      <div class="subtitle2" >
+                          Nonfederal:
+                      </div>
                       <input class="form-control" 
                         type="number" 
                         formControlName="non_federal_percent"
