--- a/front-end/src/app/forms/sched-h2/sched-h2.component.scss
+++ b/front-end/src/app/forms/sched-h2/sched-h2.component.scss
@@ -209,7 +209,12 @@
   }
 
   .subtitle {
-    font: 29;
+    font-size: 18px;
+  }
+
+  .subtitle2 {
+    font-size: 36px;
+    font-weight: bold;
   }
 
   .ngx-pagination .current{
